[metadata]
name = KeywordsPlus-CaKa12
version = 0.0.1
author = CaKa12
author_email = nickageddes09@gmail.com
description = A Package That Makes Keyword Management Easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MortyHub/Keywords-Python-Package
project_urls =
    Bug Tracker = https://github.com/MortyHub/Keywords-Python-Package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src